--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Demo</title>
     <!-- 请勿在项目正式环境中引用该 layui.css 地址 -->
-    <link href="//unpkg.com/layui@2.9.20/dist/css/layui.css" rel="stylesheet">
+    <link href="./layui/css/layui.css" rel="stylesheet">
     <style>
 
         .carousel-img {
@@ -170,17 +170,17 @@
         <div class="layui-carousel" id="ID-carousel-demo-image">
             <div carousel-item>
                 <div>
-                    <div><img src="/img/map/apex-media-maps-e-district-xl.jpg.adapt.1456w.jpg" alt="Image 1"
+                    <div><img src="./img/map/apex-media-maps-e-district-xl.jpg.adapt.1456w.jpg" alt="Image 1"
                             class="carousel-img"></div>
                 </div>
                 <div>
-                    <div><img src="/img/map/apex-media-maps-stormpoint-xl-l-m.jpg.adapt.1456w.jpg" alt="Image 1"
+                    <div><img src="./img/map/apex-media-maps-stormpoint-xl-l-m.jpg.adapt.1456w.jpg" alt="Image 1"
                             class="carousel-img"></div>
 
                 </div>
 
                 <div>
-                    <img src="/img/map/apex-media-maps-worlds-edge-xl-l-m.jpg.adapt.1456w.jpg" alt="Image 1"
+                    <img src="./img/map/apex-media-maps-worlds-edge-xl-l-m.jpg.adapt.1456w.jpg" alt="Image 1"
                         class="carousel-img">
 
                 </div>
@@ -519,7 +519,7 @@
     </div>
     </div>
 </body>
-<script src="//unpkg.com/layui@2.9.20/dist/layui.js"></script>
+<script src="./layui/layui.js"></script>
 
 <script>
     layui.use(function () {
