--- a/index.html
+++ b/index.html
@@ -170,17 +170,17 @@
         <div class="layui-carousel" id="ID-carousel-demo-image">
             <div carousel-item>
                 <div>
-                    <div><img src="./img/map/apex-media-maps-e-district-xl.jpg.adapt.1456w.jpg" alt="Image 1"
+                    <div><img src="/apex-media-maps-e-district-xl.jpg.adapt.1456w.jpg" alt="Image 1"
                             class="carousel-img"></div>
                 </div>
                 <div>
-                    <div><img src="./img/map/apex-media-maps-stormpoint-xl-l-m.jpg.adapt.1456w.jpg" alt="Image 1"
+                    <div><img src="/apex-media-maps-stormpoint-xl-l-m.jpg.adapt.1456w.jpg" alt="Image 1"
                             class="carousel-img"></div>
 
                 </div>
 
                 <div>
-                    <img src="./img/map/apex-media-maps-worlds-edge-xl-l-m.jpg.adapt.1456w.jpg" alt="Image 1"
+                    <img src="/apex-media-maps-worlds-edge-xl-l-m.jpg.adapt.1456w.jpg" alt="Image 1"
                         class="carousel-img">
 
                 </div>
