change html title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Demo</title>
+    <title>Championship</title>
     <!-- 请勿在项目正式环境中引用该 layui.css 地址 -->
     <link href="./layui/css/layui.css" rel="stylesheet">
     <style>
