--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 </div>
 
                 <div>
-                    <img src="images/SP.jpg" alt="Image 1"
+                    <img src="images/WE.jpg" alt="Image 1"
                         class="carousel-img">
 
                 </div>
